--- a/android-developer.html
+++ b/android-developer.html
@@ -77,11 +77,11 @@
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/246949-android-developer-m-d-f-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Developer (m/d/f) ... | JOIN</a></h5> 
+<h5><a href='https://endios.join.com/jobs/246949-android-developer-m-d-f-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Developer (m/d/f) ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/255141-android-lead-developer-m-f-d-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN</a></h5> 
+<h5><a href='https://endios.join.com/jobs/255141-android-lead-developer-m-f-d-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -113,7 +113,7 @@
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cobibike.recruitee.com/o/android-developer-fmx'>
+<h5><a href='https://cobibike.recruitee.com/o/android-developer-fmx'>
       Android Developer (f/m/x) - COBI.Bike GmbH
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -254,15 +254,15 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TechnorizenSoftwareSolution/743999691395616-exp-android-developer-1-2-years-'>Technorizen Software Solution Exp. Android Developer (1-2 years) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TechnorizenSoftwareSolution/743999691395616-exp-android-developer-1-2-years-'>Technorizen Software Solution Exp. Android Developer (1-2 years) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dkbcodefactory/e1c6dd05-b467-44fd-ac6a-aebe6dea60c5'>DKB Code Factory - Senior Android Developer (f,m,x)</a></h5> 
+<h5><a href='https://jobs.lever.co/dkbcodefactory/e1c6dd05-b467-44fd-ac6a-aebe6dea60c5'>DKB Code Factory - Senior Android Developer (f,m,x)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://autotrader.avature.net/careers/JobDetail/Manchester-Principal-Android-Developer/657'>Principal Android Developer - Career Portal</a></h5> 
+<h5><a href='https://autotrader.avature.net/careers/JobDetail/Manchester-Principal-Android-Developer/657'>Principal Android Developer - Career Portal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -278,7 +278,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nodes.recruitee.com/o/android-developer-cphldn'>
+<h5><a href='https://nodes.recruitee.com/o/android-developer-cphldn'>
       Android Developer - Nodes
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -294,7 +294,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://signeasy.recruiterbox.com/jobs/fk0ywb/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://signeasy.recruiterbox.com/jobs/fk0ywb/'>
     Android Developer at SignEasy
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -338,7 +338,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='http://aequilibrium.applytojob.com/apply/dgo6XEzDS0/Android-Developer'>Android Developer - Aequilibrium Software Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://aequilibrium.applytojob.com/apply/dgo6XEzDS0/Android-Developer'>Android Developer - Aequilibrium Software Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -433,7 +433,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bcg/217383ab-626f-4b6f-a4f8-4a7ca1a3b966'>BCG Digital Ventures - Contract - Android Developer, Digital Health</a></h5> 
+<h5><a href='https://jobs.lever.co/bcg/217383ab-626f-4b6f-a4f8-4a7ca1a3b966'>BCG Digital Ventures - Contract - Android Developer, Digital Health</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -465,7 +465,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>2019?6?19? ... Apply online for the job of Android Developer-china/Shanghai at DataVisor.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/8279E3A01D'>Zealcon - Jobs: Android Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/8279E3A01D'>Zealcon - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 21, 2019 ... Apply online for the job of Android Developer at Zealcon.</p>
 <hr/>
@@ -477,7 +477,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<h5><a href='http://redlatticeinc.applytojob.com/apply/bYIFVxEHQl/Android-Applications-Developer'>Android Applications Developer - REDLattice Inc - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://redlatticeinc.applytojob.com/apply/bYIFVxEHQl/Android-Applications-Developer'>Android Applications Developer - REDLattice Inc - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
