--- a/security.html
+++ b/security.html
@@ -79,7 +79,7 @@
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/amsty/961cc447-292c-4c77-803c-2eaf7f135d48'>AmSty - Cyber Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/amsty/961cc447-292c-4c77-803c-2eaf7f135d48'>AmSty - Cyber Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -131,7 +131,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Apply online for the job of Security Analyst PL (P366TS) at CINQ Technologies.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/crowdstrike/job/oVQCafwh'>CrowdStrike Careers - Security Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/crowdstrike/job/oVQCafwh'>CrowdStrike Careers - Security Analyst</a></h5> 
 <p><span class="badge badge-light">Arlington</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -174,7 +174,7 @@ tackling?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-data-analytics-engineer-6495'>Cyber Security Data Analytics Engineer - MITRE Careers</a></h5> 
+<h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-data-analytics-engineer-6495'>Cyber Security Data Analytics Engineer - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Combine CyberSecurity domain expertise and contemporary data science skills 
 to enhance cyber adversary detection, network defense, and SOC process?...</p>
@@ -199,7 +199,7 @@ to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/harmonic/job/oM2tafwb'>Harmonic Inc. Careers - Sr. Network & Security Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/harmonic/job/oM2tafwb'>Harmonic Inc. Careers - Sr. Network & Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... In the context of IT network and security team enforcement, Harmonic recruits a 
 senior Network and Security engineer to deliver network and security services to
@@ -241,7 +241,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tyro/f1be29da-750b-4b0d-b205-241500cc09a5'>Tyro - Security Team Lead - Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tyro/f1be29da-750b-4b0d-b205-241500cc09a5'>Tyro - Security Team Lead - Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -261,7 +261,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=onOCafwH&__jvst=Tenable+Employee&__jvsd=sWudthwS&__jvsc=Twitter&bid=nX0xSKwB'>Tenable Careers - Security Sales Engineer - Federal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=onOCafwH&__jvst=Tenable+Employee&__jvsd=sWudthwS&__jvsc=Twitter&bid=nX0xSKwB'>Tenable Careers - Security Sales Engineer - Federal</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -281,7 +281,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -324,7 +324,7 @@ Loading.</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of MS Cloud Security Engineer at Girteka Logistics.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://emw.workable.com/j/E32FDA7630?viewed=true'>AAS2089-1 - IT/Cyber Security Engineer, Brussels ... - EMW, Inc. - Jobs</a></h5> 
+<h5><a href='https://emw.workable.com/j/E32FDA7630?viewed=true'>AAS2089-1 - IT/Cyber Security Engineer, Brussels ... - EMW, Inc. - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>20 hours ago ... Apply online for the job of AAS2089-1 - IT/Cyber Security Engineer, Brussels - 
 Tue 23rd July (reissue) at EMW, Inc.</p>
@@ -361,7 +361,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FSRLLC/743999676151820-sr-network-security-engineer'>FSR, LLC. Sr Network Security Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FSRLLC/743999676151820-sr-network-security-engineer'>FSR, LLC. Sr Network Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
