--- a/software.html
+++ b/software.html
@@ -39,8 +39,20 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oqYY9fwf&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nKWaWLw2'>ServiceNow Careers - Sr. Software Engineer-Full Stack</a></h5> 
+<h5><a href='https://jobs.lever.co/deltadental/b5acfab8-0099-4f05-9762-ff219fb2516a'>Delta Dental - Senior Software Engineer - UI/UX</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/resultadosdigitais/jobs/4375015002'>Job Application for Software Engineer, Platform - Joinville/SC at Resultados Digitais</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/peloton/jobs/1792717'>Job Application for VP of Product Software Engineering at Peloton</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oqYY9fwf&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nKWaWLw2'>ServiceNow Careers - Sr. Software Engineer-Full Stack</a></h5> 
+<p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/juullabs/jobs/1788957'>Job Application for Senior Mobile SDET (Software Developer In Test) at JUUL Labs</a></h5> 
@@ -51,7 +63,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oRBQ8fwa&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=no59WLwO'>Guidewire Software, Inc. Careers - Senior Software Developer - Mississauga, ON, Canada</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oRBQ8fwa&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=no59WLwO'>Guidewire Software, Inc. Careers - Senior Software Developer - Mississauga, ON, Canada</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -59,7 +71,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999692385815-software-engineer'>Spry Squared, Inc. Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999692385815-software-engineer'>Spry Squared, Inc. Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Durham, NC</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -68,23 +80,23 @@
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999692355513-sr-software-engineer-data'>Traveloka Sr. Software Engineer - Data | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Square/743999692323814-software-engineer-frontend-point-of-sale-invoices'>Square Software Engineer (Frontend), Point of Sale Invoices | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/tucows/job/oQKrafwV'>Tucows Careers - Intermediate Software Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/axon/1d872e7a-63ed-4060-9980-bab37435f3f6'>Axon - Embedded Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/axon/be7c46b8-5d9f-4f72-9852-164781424bff'>Axon - Senior Embedded Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/fanatics/14de5045-66b9-4a81-b01e-38ceafb745f3'>Fanatics - Principal Software Engineer</a></h5> 
@@ -135,7 +147,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seequent.workable.com/j/233BD8D624'>Seequent - Jobs: Senior Software Developer - Apply online</a></h5> 
+<h5><a href='https://seequent.workable.com/j/233BD8D624'>Seequent - Jobs: Senior Software Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -223,7 +235,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://bossanovarobotics.applytojob.com/apply/9oM1jAy69U/Software-Engineer-Robot-Reliability-And-Testing'>Software Engineer, Robot Reliability and Testing - Bossanova Robotics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/9oM1jAy69U/Software-Engineer-Robot-Reliability-And-Testing'>Software Engineer, Robot Reliability and Testing - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -259,6 +271,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
+<h5><a href='http://jobs.jobvite.com/j2-global/job/o8Jvafwg'>J2 Global Careers - Senior Software Engineer - Java</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... J2 Global is seeking a self-motivated Senior Java Engineer to work in our Cloud 
+Services division. This Senior Software Engineer will architect, design, build?...</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Visa/743999692408667-sr-software-engineer-evg'>Visa Sr. Software Engineer- EVG | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -271,7 +288,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.hirebridge.com/v3/application/applink.aspx?cid=7801&jid=498542&source=builtin.com'>Senior Software Engineer - Java/ Scala</a></h5> 
+<h5><a href='https://recruit.hirebridge.com/v3/application/applink.aspx?cid=7801&jid=498542&source=builtin.com'>Senior Software Engineer - Java/ Scala</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>23 hours ago ... Senior Software Engineer - Java/ Scala. Denver. Enter your email address and 
 click next. Email Address Please enter a valid email address Please enter a?...</p>
@@ -317,7 +334,7 @@ places to eat worldwide and 450+ million unique monthly visitors, we help?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/LFRM4Qnawv/Visualization-Tools-Software-Engineer'>Visualization tools software engineer - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<h5><a href='http://profacebook.applytojob.com/apply/LFRM4Qnawv/Visualization-Tools-Software-Engineer'>Visualization tools software engineer - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -357,7 +374,7 @@ places to eat worldwide and 450+ million unique monthly visitors, we help?...</p
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Sr. Software Engineer at Anko.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/7DB6392956'>CSC Generation - Jobs: Senior Software Engineer (Z Gallerie ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/7DB6392956'>CSC Generation - Jobs: Senior Software Engineer (Z Gallerie ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Senior Software Engineer (Z Gallerie) at CSC 
 Generation.</p>
@@ -431,26 +448,6 @@ operational feedback and diagnostics functionality. Help bring up new systems,?.
 <h5><a href='https://jobs.lever.co/signalfx/380ba910-48a5-4ff6-b122-a537f292b53a'>SignalFx - Software Engineer -- Integrations</a></h5> 
 <p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/papercut/161ea9b1-ef1f-42d8-b71a-db731972d553'>PaperCut Software - Full Stack Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://letzte-werbung.join.com/jobs/259840-software-engineer-web-und-cloud-w-m-x-ehrenamt-fuer-baeume-retten'>Software Engineer Web & Cloud (w/m/x) - Ehrenamt f?r B?ume retten</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>17. Juli 2019 ... Letzte Werbung e.V. has a remote job opening for Software Engineer Web & 
-Cloud (w/m/x) - Ehrenamt f?r B?ume retten (published: 15.07.2019). Apply now 
-or?...</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://looka.workable.com/jobs/1073438'>Looka (formerly Logojoy) - Jobs: Lead Software Engineer - Apply ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>3 days ago ... Looka (formerly Logojoy) is exploring the intersection of machine learning and 
-design, providing users with a platform to make beautiful designs for any project.</p>
-<hr/>
-<h5><a href='https://smartnews.workable.com/jobs/1083862'>Staff Software Engineer, Applied Machine Learning</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>4 days ago ... Apply online for the job of Staff Software Engineer, Applied Machine Learning at 
-SmartNews, Inc.</p>
 <hr/>
 
 
